fix invisible icon

--- a/src/AppCode/AppCode.css
+++ b/src/AppCode/AppCode.css
@@ -17,6 +17,7 @@
 
   height: var(--trueHeight);
   max-height: var(--trueHeight);
+  padding: 2px;
 }
 
 @media (orientation: portrait) {
